overlays/demo/resources/rdepot-db.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdepot-db
spec:
  selector:
    matchLabels:
      app: rdepot-db
  serviceName: rdepot-db
  replicas: 1
  template:
    metadata:
      labels:
        app: rdepot-db
    spec:
      containers:
        - name: postgresql
          image: postgres:15
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: "1Gi"
