overlays/demo/resources/rdepot-db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdepot-db
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: rdepot-db
